- Plugin dialogs are shown with a larger initial size
- Add close buttons to each tab in the main document view area (not available in KDE 4.0)
- Make "print", "export as HTML", "dynamic word wrap", and "increase/descress font size" available for the console window
- Use a native menu, instead of the default TclTk-menu			TODO: test, discuss the settings page, again
- Fixed: Newly created variables were not properly updated when closing and re-opening the editor
- Added "paste special" action to script editor and console for pasting R vectors and matrices from spreadsheets
- Fix order of menus for detached windows
- File->Open R Script File now allows to specify the character encoding to use
- Fixed: No entries were added the recent script/workspaces actions after "save as"
- Initialize the output file with an appropriate encoding specification
- Add SVG support to export (graphics) plugin
- Add basic settings format settings for graphics output
- Convert all plugins to use ECMAscript instead of PHP; RKWard no longer depends on PHP
- Fixed: Frequent crashes while running automated plugintests
- Fixed: Filenames without extension would not be shown in file dialogs
- Fixed: Calling "fix(my.fun)" would remove comments
- Fixed: Removing "@CRAN@" from the repositories would break package installation

--- Version 0.5.2 - Oct-26-2009
- Add Stata data file import plugin (by Michael Ash)
- All directly accessible plugins now have at least one automated test
- Add support for the dynamic help server introduced in R 2.10.0
- Assorted minor fixes and improvements to several plugins
- Fix deadlock while handling some Tcl events
- Plugin dialogs close automatically after submitting (by default)
- Fetching object structure is much faster for very large data.frames
- Fix crash when loading certain packages on Windows
- Fix some potential path issues on Windows
- "Analysis" menu was restructured, slightly
- Debug output (previously sent to stderr) is now written to a temporary file